# datadog-agent-dev

./: .gitignore  2026-05-18-084723-worktree-dev-env.txt  404.html  CHANGELOG.md  LICENSE.txt  README.md  action.yml  hatch.toml  hatch_build.py  index.html  lychee.toml  main.sh  mkdocs.yml  objects.inv  pyoxidizer.bzl  pyproject.toml  renovate.json  ruff.toml  ruff_defaults.toml  sitemap.xml  static-analysis.datadog.yml  worktree-support.md
.dda/extend/commands/run/: __init__.py
.github/: CODEOWNERS
.github/actions/build-macos-package/: action.yml
.github/workflows/: build-distributions.yml  build.yml  docs.yml  test-install.yml  test.yml
assets/css/: custom.css
docs/: index.md  install.md
docs/.hooks/: inject_variables.py  plugin_register.py  title_from_content.py
docs/assets/css/: custom.css
docs/guidelines/: cli.md  docs.md
docs/how-to/dev-env/: browser-forwarding.md
docs/how-to/extend/: dependency.md  local.md  plugin.md
docs/how-to/feature-flags/: ci.md
docs/how-to/process/: run.md  tools.md
docs/public/: index.md
docs/reference/api/: app.md  ci.md  command.md  config.md  constants.md  date.md  feature_flags.md  fs.md  git.md  github.md  platform.md  process.md  retry.md  telemetry.md  terminal.md  tools.md
docs/reference/api/container/: model.md
docs/reference/api/network/: http.md
docs/reference/cli/: commands.md  index.md
docs/reference/interface/: tool.md
docs/reference/interface/env/: metadata.md  status.md
docs/tutorials/cli/: create-command.md
github/: dependabot.yml
guidelines/cli/: index.html
guidelines/docs/: index.html
how-to/dev-env/browser-forwarding/: index.html
how-to/extend/local/: index.html
how-to/extend/plugin/: index.html
how-to/feature-flags/ci/: index.html
how-to/process/run/: index.html
how-to/process/tools/: index.html
install/: index.html
reference/api/app/: index.html
reference/api/ci/: index.html
reference/api/command/: index.html
reference/api/config/: index.html
reference/api/constants/: index.html
reference/api/container/model/: index.html
reference/api/date/: index.html
reference/api/feature_flags/: index.html
reference/api/fs/: index.html
reference/api/git/: index.html
reference/api/github/: index.html
reference/api/network/http/: index.html
reference/api/platform/: index.html
reference/api/process/: index.html
reference/api/retry/: index.html
reference/api/telemetry/: index.html
reference/api/terminal/: index.html
reference/api/tools/: index.html
reference/cli/: index.html
reference/cli/commands/: index.html
reference/interface/env/status/: index.html
reference/interface/tool/: index.html
release/macos/: build_pkg.py
release/macos/pkg/: distribution.xml
release/unix/: make_scripts_portable.py
release/windows/: make_scripts_portable.py
search/: search_index.json
src/dda/: __init__.py  __main__.py
src/dda/ai/: agent.py  runner.py  tui.py  workspace.py
src/dda/cli/: __init__.py  application.py  base.py  terminal.py
src/dda/cli/ai/: __init__.py
src/dda/cli/bzl/: __init__.py
src/dda/cli/compute/: __init__.py
src/dda/cli/config/: __init__.py
src/dda/cli/env/: __init__.py
src/dda/cli/gh/: __init__.py
src/dda/cli/info/: __init__.py
src/dda/cli/inv/: __init__.py
src/dda/cli/self/: __init__.py
src/dda/cli/validate/: __init__.py
src/dda/config/: constants.py  file.py  utils.py
src/dda/config/model/: __init__.py  env.py  git.py  github.py  orgs.py  repos.py  storage.py  telemetry.py  terminal.py  tools.py  update.py  user.py
src/dda/env/: docker.py  models.py  ssh.py
src/dda/env/config/: agent.py
src/dda/env/dev/: __init__.py  browser_proxy.py  fs.py  interface.py
src/dda/env/qa/: __init__.py  interface.py
src/dda/env/shells/: __init__.py  bash.py  interface.py  nu.py  zsh.py
src/dda/feature_flags/: client.py  manager.py
src/dda/github/: core.py  http.py
src/dda/mcp/: manager.py
src/dda/secrets/: api.py  ssm.py  vault.py
src/dda/telemetry/: constants.py  daemon.py  manager.py  secrets.py  vault.py
src/dda/telemetry/daemon/: __main__.py  base.py  handler.py  log.py  trace.py
src/dda/telemetry/writers/: base.py  log.py  (+1 more)
src/dda/tools/: __init__.py  base.py  bazel.py  docker.py  git.py  go.py  uv.py
src/dda/types/: hooks.py
src/dda/user/: datadog.py
src/dda/utils/: _git.py  ci.py  date.py  diff.py  exec_context.py  fs.py  platform.py  process.py  retry.py  ssh.py  venv.py
src/deva/: __main__.py  metadata.json
src/deva/cli/: __init__.py  application.py  base.py  terminal.py
src/deva/config/: constants.py  file.py  utils.py
src/deva/env/: models.py  ssh.py
src/deva/telemetry/: daemon.py  manager.py  model.py  vault.py
src/deva/tools/: __init__.py  base.py  docker.py  uv.py
src/deva/utils/: ci.py  fs.py  logging.py  process.py  ssh.py  vault.py  venv.py
tests/: conftest.py
tests/cli/: test_dynamic.py  test_pin.py
tests/cli/bzl/: test_bzl.py
tests/cli/config/: test_explore.py  test_find.py  test_restore.py  test_set.py  test_show.py
tests/cli/inv/: test_inv.py
tests/cli/self/: test_feature_enabled.py
tests/cli/tools/: test_bazel.py
tests/cli/validate/: __init__.py  test_ai-rules.py  test_ai_rules.py
tests/config/: test_repos.py
tests/env/: __init__.py
tests/env/dev/: test_fs.py  test_interface.py
tests/env/qa/: test_interface.py
tests/helpers/: api.py
tests/telemetry/metadata/: test_execution.py
tests/tools/: conftest.py  test_bzl.py  test_git.py  test_go.py  test_uv.py
tests/tools/git/: conftest.py  test_git.py
tests/tools/github/: test_github.py
tests/tools/go/: conftest.py  test_go.py
tests/utils/: test_date.py  test_fs.py  test_platform.py  test_process.py  test_retry.py  test_ssh.py  test_terminal.py
tests/utils/container/: test_model.py  test_volumes.py
tests/utils/git/: conftest.py  test_changeset.py  test_commit.py  test_github.py  test_remote.py  test_repo.py
tests/utils/network/: test_protocols.py
tests/utils/pty/: __init__.py  test_handle.py  test_unix.py  test_windows_vt.py
tutorials/cli/create-command/: index.html
(+277 files in other folders)
